--- a/package.json
+++ b/package.json
@@ -15,9 +15,39 @@
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/localize": "^15.0.0",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@full-fledged/alerts": "^15.0.0",
+    "@progress/kendo-angular-buttons": "^12.0.1",
+    "@progress/kendo-angular-common": "12.0.0",
+    "@progress/kendo-angular-dateinputs": "12.0.1",
+    "@progress/kendo-angular-dialog": "^12.0.1",
+    "@progress/kendo-angular-dropdowns": "^12.0.1",
+    "@progress/kendo-angular-excel-export": "^12.0.1",
+    "@progress/kendo-angular-filter": "12.0.1",
+    "@progress/kendo-angular-grid": "^12.0.1",
+    "@progress/kendo-angular-icons": "^12.0.1",
+    "@progress/kendo-angular-inputs": "^12.0.1",
+    "@progress/kendo-angular-intl": "^12.0.1",
+    "@progress/kendo-angular-l10n": "12.0.0",
+    "@progress/kendo-angular-label": "^12.0.1",
+    "@progress/kendo-angular-navigation": "^12.0.1",
+    "@progress/kendo-angular-pager": "12.0.0",
+    "@progress/kendo-angular-pdf-export": "^12.0.1",
+    "@progress/kendo-angular-popup": "12.0.0",
+    "@progress/kendo-angular-treeview": "^12.0.1",
+    "@progress/kendo-angular-utils": "^12.0.1",
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-drawing": "^1.17.5",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-default": "^6.3.0",
+    "bi-libs": "file:../BI-Libs",
+    "bi-modules": "file:../BI-Libs/dist/bi-modules",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
