--- a/package.json
+++ b/package.json
@@ -44,12 +44,16 @@
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-svg-icons": "^1.0.0",
     "@progress/kendo-theme-default": "^6.3.0",
-    "bi-libs": "file:../BI-Libs",
-    "bi-modules": "file:../BI-Libs/dist/bi-modules",
+    "bi-modules": "file:../BI-Prime/dist/bi-modules",
+    "primeicons": "^6.0.1",
+    "primeng": "15.0.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "quill": "^1.3.7",
+    "@types/quill": "^2.0.10",
+    "chart.js": "^4.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
