--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       ]
     },
     "baseUrl": "./",
+    "skipLibCheck": true,
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
