--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
@@ -33,10 +34,12 @@
     "@progress/kendo-angular-intl": "^12.0.1",
     "@progress/kendo-angular-l10n": "12.0.0",
     "@progress/kendo-angular-label": "^12.0.1",
+    "@progress/kendo-angular-layout": "^12.1.0",
     "@progress/kendo-angular-navigation": "^12.0.1",
     "@progress/kendo-angular-pager": "12.0.0",
     "@progress/kendo-angular-pdf-export": "^12.0.1",
     "@progress/kendo-angular-popup": "12.0.0",
+    "@progress/kendo-angular-progressbar": "^12.1.0",
     "@progress/kendo-angular-treeview": "^12.0.1",
     "@progress/kendo-angular-utils": "^12.0.1",
     "@progress/kendo-data-query": "^1.6.0",
@@ -46,7 +49,7 @@
     "@progress/kendo-theme-default": "^6.3.0",
     "@types/quill": "^2.0.10",
     "bi-interfaces": "file:../BI-Interfaces/dist/bi-interfaces",
-    "bi-modules": "file:../BI-Prime/dist/bi-modules",
+    "bi-modules": "file:../BI-Libs/dist/bi-modules",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "jquery": "^3.6.4",
