--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/localize": "^15.0.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -49,7 +50,7 @@
     "@progress/kendo-theme-default": "^6.3.0",
     "@types/quill": "^2.0.10",
     "bi-interfaces": "file:../BI-Interfaces/dist/bi-interfaces",
-    "bi-modules": "file:../BI-Libs/dist/bi-modules",
+    "bi-modules": "file:../BI-kendo/BI-Libs/dist/bi-modules",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.3.0",
     "jquery": "^3.6.4",
