--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "primeng": "15.0.0",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
